data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_303.wast
;; 4. **Testing Loop Control Flow with Nop Interspersed Before br Instruction**:    - Place multiple `nop` instructions before a `br` instruction within a loop. The differential test will ensure that `wizard_engine` does not erroneously create an infinite loop by mismanaging context initialization due to `nop`.    - Constraint: Loop should exit on `br` as expected; `nop` should not alter this behavior.

(assert_invalid
  (module
    (func
      (loop
        (nop)
        (nop)
        (nop)
        (br 0)
      )
    )
  )
  "type mismatch"
)